Refactor for Java 21